syntax = "proto3";

option csharp_namespace = "AspNetCoreGrpc";

package GrpcMypkg1;

// The service definition.
service GrpcMy {
  // Called By client and sends a response from server to client
  rpc GrpcMyFunc (GrpcMyRequest) returns (GrpcMyReply);
}

// The request message
message GrpcMyRequest {
	string m_field_1_string = 1;
	bytes m_field_2_bytesstring = 2;
	repeated GrpcModelField3 m_field_3_array = 3;
}

// The response message
message GrpcMyReply {
	string m_field_1_string = 1;
	bytes m_field_2_bytesstring = 2;
	repeated GrpcModelField3 m_field_3_array = 3;
}

//models
message GrpcModelField3 {
	int32 m_field_1_int = 1;
	int64 m_field_2_long = 2;
}